# katcp-rust

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: api.md
docs/rustdoc/: crates.js  help.html  settings.html  src-files.js
docs/rustdoc/katcp/: all.html  index.html  sidebar-items.js
docs/rustdoc/katcp/client/: enum.ClientError.html  index.html  sidebar-items.js  struct.DeviceClient.html  struct.SensorUpdate.html  type.InformCallback.html  type.SensorCallback.html
docs/rustdoc/katcp/message/: constant.MAX_MSG_SIZE.html  enum.MessageError.html  enum.MessageType.html  index.html  sidebar-items.js  struct.Message.html  struct.MessageParser.html
docs/rustdoc/katcp/protocol/: enum.ProtocolFlag.html  index.html  sidebar-items.js  (+1 more)
docs/rustdoc/search.index/: 00f2cb5a092c.js  0d1e35cb7b8e.js  193e48e183f0.js  1c2d1ff6a859.js  25d7c4d3dc6e.js  312cad3d4a76.js  36438bd12058.js  3b1d00537b53.js  3ee5a327376d.js  402f051168f6.js  432923bc2b57.js  43555cda2984.js  4482e7f110cb.js  458f354b45ad.js  45d208b03c9c.js  4ebd87fcb83f.js  5a65f8baea10.js  5b42745f1c9d.js  62ab5e8f6cca.js  6494345bb2c3.js  64f494a59e8e.js  674bf2879a80.js  680031a22f71.js  6c645a13dadc.js  7cef6dd783c7.js  root.js
examples/: client.rs  client_tutorial.md  device_server.rs  sensor_server.rs  server_tutorial.md
src/: client.rs  lib.rs  message.rs  protocol.rs  sampling.rs  sensor.rs  server.rs  types.rs
tests/: bench_aiokatcp.py  bench_aiokatcp_results.json  bench_katcp_python.py  bench_katcp_python_results.json  benchmarks.rs  integration.rs
(+60 files in other folders)
